Demo Packs/Log Debugger Pack/force-app/main/default/objects/Knowledge__kav/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <label>External ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>