Demo Packs/Log Debugger Pack/force-app/main/default/objects/Knowledge__kav/fields/KCSArticle_Cause__c.field-meta.xml
<CustomField>
    <fullName>KCSArticle_Cause__c</fullName>
    <description>Explains the root cause of the issue.</description>
    <label>Cause</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>