Demo Packs/Log Debugger Pack/force-app/main/default/objects/Knowledge__kav/fields/KCSArticle_Issue__c.field-meta.xml
<CustomField>
    <fullName>KCSArticle_Issue__c</fullName>
    <description>Describes the issue the customer is encountering.</description>
    <label>Issue</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>